Fix teksten align i midten
Align er blevet fikset.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
-h1 {
-  color: red;
+#inaktivTekst{
+  color: rgb(255, 255, 255);
+
+ 
+
+}
+
+body {
+  background-color:plum;
+
+    display: flex;
+    text-align: center;
+    height: 100vh;
+    margin: 0;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
 }
